--- a/index.html
+++ b/index.html
@@ -6,235 +6,7 @@
 	<title>Birthday Card</title>
 	<!-- Google Font-->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
-	<!-- Stylesheet -->
-	<style>
-		.first-container {
-			width: 400px;
-			height: 400px;
-			background-color: #ffe7f8;
-			position: absolute;
-			transform: translate(-50%, -50%);
-			top: 50%;
-			left: 50%;
-			border-radius: 2px;
-			box-shadow: 0 20px 45px rgba(120, 76, 10, 0.1);
-			z-index: -1;
-		}
-
-		.first-cake {
-			width: 100%;
-			position: absolute;
-			bottom: 60px;
-		}
-
-		.first-bottom-layer,
-		.first-top-layer,
-		.first-middle-layer {
-			height: 80px;
-			width: 240px;
-			position: relative;
-			margin: auto;
-			background-repeat: repeat;
-			background-size: 100% 100%, 60px 100px;
-			background-position: 28px 0;
-			background-image: linear-gradient(transparent 50px,
-					#e3a953 50px,
-					#e3a953 60px,
-					transparent 60px),
-				radial-gradient(circle at 30px 5px, #713e16 30px, #eac284 31px);
-		}
-
-		.first-middle-layer {
-			transform: scale(0.85);
-			top: 72px;
-			animation: rise-1 2s forwards;
-		}
-
-		@keyframes rise-1 {
-			100% {
-				top: 7px;
-			}
-		}
-
-		.first-top-layer {
-			transform: scale(0.7);
-			top: 144px;
-			animation: rise-2 2s 2s forwards;
-		}
-
-		@keyframes rise-2 {
-			100% {
-				top: 26px;
-			}
-		}
-
-		.first-candle {
-			background: repeating-linear-gradient(45deg,
-					#fd3018 0,
-					#fd3018 5px,
-					#ffa89e 5px,
-					#ffa89e 10px);
-			height: 45px;
-			width: 15px;
-			position: absolute;
-			margin: auto;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			animation: rise-3 1s 4s forwards;
-		}
-
-		@keyframes rise-3 {
-			100% {
-				bottom: 202px;
-			}
-		}
-
-		.first-candle:after {
-			content: "";
-			position: absolute;
-			height: 16px;
-			width: 16px;
-			background-color: #ffee54;
-			border-radius: 0 50% 50% 50%;
-			transform: scale(0) rotate(45deg);
-			bottom: 50px;
-			left: -0.5px;
-			animation: flame 1.5s 5s forwards;
-		}
-
-		@keyframes flame {
-			100% {
-				transform: scale(1) rotate(45deg);
-			}
-		}
-
-		/* second section */
-
-		body {
-			background-color: #f8b8dc;
-		}
-
-		.card {
-			width: 640px;
-			height: 400px;
-			position: absolute;
-			margin: auto;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			-webkit-perspective: 1200px;
-			perspective: 1200px;
-			transition: 1s;
-		}
-
-		.card:hover {
-			transform: rotate(-5deg);
-		}
-
-		.card:hover .outside {
-			transform: rotateY(-130deg);
-		}
-
-		.outside,
-		.inside {
-			height: 100%;
-			width: 50%;
-			position: absolute;
-			left: 50.1%;
-		}
-
-		.inside {
-			background: linear-gradient(to right, #e7e7e7, #ffffff 30%);
-			line-height: 3;
-			padding: 0 20px;
-			text-align: center;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-around;
-			align-items: center;
-			left: 50%;
-		}
-
-		.outside {
-			-webkit-transform-style: preserve-3d;
-			transform-style: preserve-3d;
-			z-index: 1;
-			transform-origin: left;
-			transition: 2s;
-			cursor: pointer;
-		}
-
-		.front,
-		.back {
-			height: 100%;
-			width: 100%;
-			position: absolute;
-			-webkit-backface-visibility: hidden;
-			backface-visibility: hidden;
-			transform: rotateX(0deg);
-		}
-
-		.front {
-			background-color: #ffffff;
-		}
-
-		.back {
-			transform: rotateY(180deg);
-			background: linear-gradient(to left, #e7e7e7, #ffffff 30%);
-		}
-
-		.happy_bday {
-			font-size: 23px;
-			text-transform: uppercase;
-			margin-top: 30px;
-			text-align: center;
-			letter-spacing: 6px;
-			color: #000046;
-		}
-
-		.inside h1 {
-			font-size: 120px;
-			line-height: 120px;
-		}
-
-		#second-part {
-			display: none;
-		}
-
-
-		.input-container {
-			position: absolute;
-			bottom: 1%;
-		}
-
-		.input-container button {
-			padding: 10px 20px;
-			background-color: #000046;
-			color: #fff;
-			border: none;
-			border-radius: 5px;
-			font-size: 16px;
-			cursor: pointer;
-			margin-top: 10px;
-		}
-
-		.input-container button:hover {
-			background-color: #3c3f58;
-		}
-
-		img {
-			width: 100%;
-			height: 100%;
-		}
-
-		.wish {
-			padding: 1rem;
-			font-size: 14px;
-			color: #000046;
-		}
-	</style>
+	<link href="./style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -288,168 +60,12 @@
 			<button id="next" onclick="next()">Next</button>
 		</div>
 	</div>
+	<audio autoplay loop muted>
+		<source src="./happy-birthday.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+	</audio>
 
-	<script>
-
-		function blow_candle() {
-			const timerButton = document.getElementById('blow_candle');
-
-			let countdownValue = 3; // Initial countdown value in seconds
-			let timerInterval;
-
-			timerInterval = setInterval(function () {
-				countdownValue--;
-				console.log("countdownValue", countdownValue);
-
-				if (countdownValue <= 0) {
-					clearInterval(timerInterval); // Stop the timer
-					timerButton.innerText = 'Timer Complete';
-					// You can re-enable the button or perform other actions here
-					timerButton.disabled = false;
-
-					startConfetti();
-				} else {
-					timerButton.innerText = countdownValue;
-				}
-			}, 1000); // Update every 1 second (1000 milliseconds)
-		}
-
-		function next() {
-			document.getElementById("first-container").style.display = "none";
-			document.getElementById("second-part").style = 'display: block';
-		}
-
-		var maxParticleCount = 150; //set max confetti count
-		var particleSpeed = 2; //set the particle animation speed
-		var startConfetti; //call to start confetti animation
-		var stopConfetti; //call to stop adding confetti
-		var toggleConfetti; //call to start or stop the confetti animation depending on whether it's already running
-		var removeConfetti; //call to stop the confetti animation and remove all confetti immediately
-
-		(function () {
-			startConfetti = startConfettiInner;
-			stopConfetti = stopConfettiInner;
-			toggleConfetti = toggleConfettiInner;
-			removeConfetti = removeConfettiInner;
-			var colors = ["DodgerBlue", "OliveDrab", "Gold", "Pink", "SlateBlue", "LightBlue", "Violet", "PaleGreen", "SteelBlue", "SandyBrown", "Chocolate", "Crimson"];
-			var streamingConfetti = false;
-			var animationTimer = null;
-			var particles = [];
-			var waveAngle = 0;
-
-			function resetParticle(particle, width, height) {
-				particle.color = colors[(Math.random() * colors.length) | 0];
-				particle.x = Math.random() * width;
-				particle.y = Math.random() * height - height;
-				particle.diameter = Math.random() * 10 + 5;
-				particle.tilt = Math.random() * 10 - 10;
-				particle.tiltAngleIncrement = Math.random() * 0.07 + 0.05;
-				particle.tiltAngle = 0;
-				return particle;
-			}
-
-			function startConfettiInner() {
-				var width = window.innerWidth;
-				var height = window.innerHeight;
-				window.requestAnimFrame = (function () {
-					return window.requestAnimationFrame ||
-						window.webkitRequestAnimationFrame ||
-						window.mozRequestAnimationFrame ||
-						window.oRequestAnimationFrame ||
-						window.msRequestAnimationFrame ||
-						function (callback) {
-							return window.setTimeout(callback, 16.6666667);
-						};
-				})();
-				var canvas = document.getElementById("confetti-canvas");
-				if (canvas === null) {
-					canvas = document.createElement("canvas");
-					canvas.setAttribute("id", "confetti-canvas");
-					canvas.setAttribute("style", "display:block;z-index:999999;pointer-events:none");
-					document.body.appendChild(canvas);
-					canvas.width = width;
-					canvas.height = height;
-					window.addEventListener("resize", function () {
-						canvas.width = window.innerWidth;
-						canvas.height = window.innerHeight;
-					}, true);
-				}
-				var context = canvas.getContext("2d");
-				while (particles.length < maxParticleCount)
-					particles.push(resetParticle({}, width, height));
-				streamingConfetti = true;
-				if (animationTimer === null) {
-					(function runAnimation() {
-						context.clearRect(0, 0, window.innerWidth, window.innerHeight);
-						if (particles.length === 0)
-							animationTimer = null;
-						else {
-							updateParticles();
-							drawParticles(context);
-							animationTimer = requestAnimFrame(runAnimation);
-						}
-					})();
-				}
-			}
-
-			function stopConfettiInner() {
-				streamingConfetti = false;
-			}
-
-			function removeConfettiInner() {
-				stopConfetti();
-				particles = [];
-			}
-
-			function toggleConfettiInner() {
-				if (streamingConfetti)
-					stopConfettiInner();
-				else
-					startConfettiInner();
-			}
-
-			function drawParticles(context) {
-				var particle;
-				var x;
-				for (var i = 0; i < particles.length; i++) {
-					particle = particles[i];
-					context.beginPath();
-					context.lineWidth = particle.diameter;
-					context.strokeStyle = particle.color;
-					x = particle.x + particle.tilt;
-					context.moveTo(x + particle.diameter / 2, particle.y);
-					context.lineTo(x, particle.y + particle.tilt + particle.diameter / 2);
-					context.stroke();
-				}
-			}
-
-			function updateParticles() {
-				var width = window.innerWidth;
-				var height = window.innerHeight;
-				var particle;
-				waveAngle += 0.01;
-				for (var i = 0; i < particles.length; i++) {
-					particle = particles[i];
-					if (!streamingConfetti && particle.y < -15)
-						particle.y = height + 100;
-					else {
-						particle.tiltAngle += particle.tiltAngleIncrement;
-						particle.x += Math.sin(waveAngle);
-						particle.y += (Math.cos(waveAngle) + particle.diameter + particleSpeed) * 0.5;
-						particle.tilt = Math.sin(particle.tiltAngle) * 15;
-					}
-					if (particle.x > width + 20 || particle.x < -20 || particle.y > height) {
-						if (streamingConfetti && particles.length <= maxParticleCount)
-							resetParticle(particle, width, height);
-						else {
-							particles.splice(i, 1);
-							i--;
-						}
-					}
-				}
-			}
-		})();
-	</script>
 </body>
+<script src="script.js"></script>
 
 </html>
