--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
 			<button id="next" onclick="next()">Next</button>
 		</div>
 	</div>
-	<audio autoplay loop muted>
+	<audio id="bg-music" loop>
 		<source src="./happy-birthday.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-
 </body>
 <script src="script.js"></script>
 
