--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div>
 		<div class="first-container" id="first-container">
 			<div class="first-cake">
-				<div class="first-candle"></div>
+				<div class="first-candle" id="first-candle"></div>
 				<div class="first-top-layer"></div>
 				<div class="first-middle-layer"></div>
 				<div class="first-bottom-layer"></div>
@@ -56,7 +56,7 @@
 	<div>
 		<!-- Button to start voice recognition -->
 		<div class="input-container">
-			<button id="blow_candle" onclick="blow_candle()">blow candle</button>
+			<button id="cut_cake" onclick="cut_cake()">Candle Bhooja de ab</button>
 			<button id="next" onclick="next()">Next</button>
 		</div>
 	</div>
