--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
 	<div class="first_section">
 		<div id="clockdiv">
-		<div>
-			<span class="days"></span>
-			<div class="smalltext">Days</div>
-		</div>
-		<div>
-			<span class="hours"></span>
-			<div class="smalltext">Hours</div>
-		</div>
-		<div><span class="minutes"></span>
-			<div class="smalltext">Minutes</div>
-		</div>
-		<div><span class="seconds"></span>
-			<div class="smalltext">Seconds</div>
-		</div>
+			<div>
+				<span class="days"></span>
+				<div class="smalltext">Days</div>
+			</div>
+			<div>
+				<span class="hours"></span>
+				<div class="smalltext">Hours</div>
+			</div>
+			<div><span class="minutes"></span>
+				<div class="smalltext">Minutes</div>
+			</div>
+			<div><span class="seconds"></span>
+				<div class="smalltext">Seconds</div>
+			</div>
 		</div>
 	</div>
 	<div class="second_section" style="display: none;">
@@ -42,16 +42,17 @@
 			</div><!-- end cardfront -->
 			<div class="cardinside">
 				<h3 class="back"><b>HAPPY BIRTHDAY!</b></h3>
-				<p><b>My Dear Baby,</b></p>
-				<p>Happy birthday to the person who makes my life more meaningful just by being in it. <br><br> Tabiyat kaa
-					khayal rakho,<br> Khudpe dhayn diya karo, <br> Khane me kanjusi naa karo...! <br><br> Stresss liya hi
-					mat karo. <br><br> Hamesha Khush Raho. <br><br> I Love You Forever ❤️.</p>
+				<p style="font-size: 20px;"><b>My Dear Baby,</b></p>
+				<p style="font-size: 14px;">Happy birthday to the person who makes my life more meaningful just by being in it. <br><br> Thank you so much mere jivan me ane ke liye. Ap bohot khayal rakhte ho aur hamesha samjhate aaye sahi galat. Bohot kuch karte ho app mere liye bure wakt me sath dete ho sambhalte ho bs yehi chaiye tha mere jivan me. Sachme bohot khushnaseeb samjhta hu ki aap mere jivan ka ek hissa ho. Aap meri jaan ho , Meri dilruba ho, Meri Dhadkan ho. Thanku so much for loving me ❤️. <br> Baaki Hamesha Tabiyat kaa
+					khayal rakho waise me hu me bhi rakhunga hi but fir bhi...,<br> Aur khudpe dhayn diya karo sabko sambhalte sambhalte khudpe laparwahi mt karo, <br> Khane me kanjusi naa karo...! <br><br> Stresss liya hi
+					mat karo. <br><br> Hamesha Khush Raho. <br><br> Hamesha Sath Raho... <br><br>I Loveeee Youuuuuuuuuuu Forever ❤️. <br> #Mine❤️</p>
 				<!-- <p class="name">xxx</p> -->
 			</div><!-- end cardinside -->
 		</div><!-- end birthdaycard -->
 		<div class="break"></div>
 		<button>Next</button>
 		<div class="first-container" id="first-container" style="display: none;">
+			<h3>Happy Birthday My Love ❤️</h3>
 			<div class="velas">
 				<div class="fuego"></div>
 				<div class="fuego"></div>
@@ -216,6 +217,7 @@
 				</path>
 				<rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
 			</svg>
+			<div class="balloon"></div>
 		</div>
 		<audio id="bg-music" loop>
 			<source src="./happy-birthday.mp3" type="audio/mpeg">
@@ -224,5 +226,6 @@
 	</div>
 </body>
 <script src="script.js"></script>
+<script src="./firecrack.js"></script>
 
 </html>
